removed account number from scripts

--- a/.github/workflows/deploy_beta.yml
+++ b/.github/workflows/deploy_beta.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCOUNT_NUMBER: ${{ secrets.AWS_ACCOUNT_NUMBER }}
 
     steps:
       - name: Checkout Code
